# flupp-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
data/: flugbuch.flu  flugbuch.flu.md
src/: lib.rs
src/snapshots/: flupp__tests__it_works.snap
