[package]
name = "flupp"
version = "0.1.3"
description = "FluPP flight log file reader"
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/flupp-rs.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
thiserror = "1.0.49"
time = "0.3.29"

[dev-dependencies]
insta = "=1.33.0"
